# iCCF

./: .travis.yml  CCF.md  CITATION.cff  ESPRESSO.md  LICENSE  README.md  _config.yml  basic_usage.md  bigaussian.py  bisector.py  gaussian.py  index.html  index.md  indicators.md  logo.py  objects.inv  pyproject.toml  requirements.txt  scripts.md  setup.py  sitemap.xml  ssh_files.md  vspan.py
.github/workflows/: python-package.yml  python-publish.yml  test-pip-install.yml
API/: index.html
CCF/: index.html
_includes/: nav_footer_custom.html
assets/scripts/: explain_indicators.py
basic_usage/: index.html
css/: base.css
custom/: main.html
custom/templates/: footer.html  header.html
docs/: API.md  CCF.md  basic_usage.md  index.md  indicators.md  scripts.md
example_data/: CCF1.npy
iCCF/: __init__.py  bigaussian.py  bisector.py  chromatic.py  config.py  gaussian.py  iCCF.py  keywords.py  masks.py  meta.py  meta_ESPRESSO.py  scripts.py  ssh_files.py  utils.py  version.py  vspan.py  writers.py  wspan.py
iCCF/data/: CORALIE_F9.fits  CORALIE_G2.fits  CORALIE_G8.fits  CORALIE_G9.fits  CORALIE_K2.fits  CORALIE_K6.fits  CORALIE_M0.fits  CORALIE_M2.fits  CORALIE_M3.fits  CORALIE_M4.fits  CORALIE_M5.fits  ESPRESSO_F9.fits  ESPRESSO_G2.fits  ESPRESSO_G9.fits  ESPRESSO_K2.fits  ESPRESSO_K6.fits  ESPRESSO_M0.fits  ESPRESSO_M2.fits  ESPRESSO_M4.fits  ESPRESSO_M5.fits  ESPRESSO_new_G8.fits  ESPRESSO_new_G9.fits  ESPRESSO_new_M2.fits  ESPRESSO_new_M3.fits  ESPRESSO_old_F9.fits  ESPRESSO_old_G8.fits  ESPRESSO_old_M3.fits  ESPRESSO_old_M4.fits  ESPRESSO_old_M5.fits  HARPS_F9.fits  HARPS_G2.fits  HARPS_G8.fits  HARPS_G9.fits  HARPS_K2.fits  HARPS_K6.fits  HARPS_M0.fits  HARPS_M2.fits  HARPS_M3.fits  HARPS_M4.fits  HARPS_M5.fits  (+11 more)
iCCF/logo/: logo.py
iCCF/tests/: test_import.py
indicators/: index.html
scripts/: index.html
search/: search_index.json
ssh_files/: index.html
tests/: test_gaussian.py  test_iCCF.py
