[project]
name = "iCCF"
version = "0.3.22"
description = "Analysis of CCF profiles and activity indicators"
authors = [
    {name = "João Faria", email = "joao.faria@unige.ch"},
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "astropy",
    "paramiko",
    "tqdm",
]

requires-python = ">=3.7"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://j-faria.github.io/iCCF/"
Repository = "https://github.com/j-faria/iCCF"
Issues = "https://github.com/j-faria/iCCF/issues"

[project.scripts]
iccf-make-ccf = "iCCF.scripts:make_CCF"
iccf-check-ccf = "iCCF.scripts:check_CCF"


[tool.setuptools]
packages = ['iCCF']

[tool.setuptools.package-data]
iCCF = ['example_data/*.npy', 'data/*']


[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

